fixed stretchy image for dog profile and user profile and re added margin for profile-info

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -229,6 +229,8 @@ img {
   width: 220px;
   text-align: center;
   display: inline-block;
+  margin-top: 10px;
+  margin-bottom: 10px;
 
 }
 
